--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <label for="efficiency">Efficiency (Km/L):</label>
         <input type="number" id="efficiency" name="efficiency"/>
         <label for="minFuelLimit">Minimum gas in tank to start pump search (%):</label>
+        <label for="minFuelLimit">Minimum gas in tank to start pump search (%öö):</label>
         <input type="number" id="minFuelLimit" name="minFuelLimit"/>
         <button type="submit">Submit</button>
     </form>
